--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "mongodb-memory-server": "^8.13.0",
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.6.2"
   }
 }
