--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
     "mongodb-memory-server": "^8.13.0",
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
