--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "xss-clean": "^0.1.4"
   }
 }
