--- a/client/jay-task-manager/package.json
+++ b/client/jay-task-manager/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.5.1",
     "react-redux": "^8.1.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
